--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ramonak/react-progress-bar": "^5.0.3",
     "@stripe/react-stripe-js": "^2.3.1",
     "@stripe/stripe-js": "^2.1.7",
     "axios": "^1.5.1",
@@ -21,12 +22,14 @@
     "react": "^18.2.0",
     "react-calendar": "^4.6.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^7.46.2",
     "react-icons": "^4.11.0",
     "react-rating": "^2.0.5",
     "react-router-dom": "^6.16.0",
     "react-tabs": "^6.0.2",
     "react-toastify": "^9.1.3",
+    "recharts": "^2.9.3",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.7.32",
     "swiper": "^10.3.1"
